2006-11-21 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/lib/expf.c: Fixed bug 1599523: result of expf(x) is
	  always positive.

2006-11-21 Raphael Neider <rneider AT web.de>

	* src/pic/device.{c,h}: added pic14_getPIC()
	* src/pic/gen.c (continueIfTrue,jumpIfTrue): added PIC code,
	  (genAnd): added PIC code for one case, fixes #1597044
	* src/pic/pcode.c (BankSelect): Ohoh, added generic optimization for
	  SFRs that are present in all banks (e.g., STATUS)

2006-11-20 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c: changed inverted ops for DECFSZ/DECFSZW and
	  INCFSZ/INCFSZW and declared them as changing Z bit,
	  (insertPCodeInstruction): correctly invert the above instructions,
	  fixes #1599333,
	  (DoBankSelect): don't panic on po_immediates

2006-11-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/aslink.h,
	* as/link/mcs51/lkihx.c (newArea),
	* as/link/mcs51/lkrloc.c: renamed newArea() to ihxNewArea()
	* as/link/mcs51/lkihx.c (ihx): output reset vector as start address

2006-11-11 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (newpCodeOpBit): search SymbolTab for referenced
	  bitfield symbols, fixes #1579535 (once more...).

2006-11-09 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/generate-cases.py,
	* support/regression/fwk/include/testfwk.h,
	* support/regression/fwk/lib/testfwk.c: used code pointers,
	  (about 50kByte less code generated for mcs51)

2006-11-06 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/acinclude.m4, debugger/mcs51/aclocal.m4,
	  debugger/mcs51/configure: fixed failed check because the function
	  rl_function_of_keyseq isn't in Readline 5.2. Thanks to Ilya Goldberg
	  who submitted the patch for gpsim.
	* debugger/mcs51/configure.in: removed the result message
	* debugger/mcs51/Makefile.in: fixed the config.status warning
	  "... seems to ignore the --datarootdir setting"

2006-11-03 Maarten Brock <sourceforge.brock AT dse.nl>
